contrast fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,7 @@
     --offwhite: #f2f0ef
     --secondary-background: oklch(100% 0 0);
     --main-foreground: oklch(0% 0 0);
-    --main: oklch(67.47% 0.1726 259.49);
+    --main: oklch(87.47% 0.1726 259.49);
     --border: oklch(0.222 0 0);
     --borderblack: var(--main-foreground);
     --ring: oklch(0.708 0 0);
@@ -100,11 +100,11 @@
     --shadowblue: 4px 4px 0px 0px #2364AA;
     --shadowpurple: 4px 4px 0px 0px #A846A0;
 
-    --chart-1: oklch(0.646 0.222 41.116);
-    --chart-2: oklch(0.6 0.118 184.704);
-    --chart-3: oklch(0.398 0.07 227.392);
-    --chart-4: oklch(0.828 0.189 84.429);
-    --chart-5: oklch(0.769 0.188 70.08);
+    --chart-1: oklch(0.846 0.222 41.116);
+    --chart-2: oklch(0.8 0.118 184.704);
+    --chart-3: oklch(0.898 0.07 227.392);
+    --chart-4: oklch(0.928 0.189 84.429);
+    --chart-5: oklch(0.869 0.188 70.08);
     --chart-active-dot: #000;
     --sidebar: hsl(0 0% 98%);
     --sidebar-foreground: hsl(240 5.3% 26.1%);
@@ -127,7 +127,7 @@
     --secondary-foreground: oklch(0.205 0 0);
     --muted: oklch(0.97 0 0);
     --muted-foreground: oklch(0.556 0 0);
-    --accent: oklch(0.7 0 0);
+    --accent: oklch(0.9 0 0);
     --accent-foreground: oklch(0.205 0 0);
     --destructive: oklch(0.577 0.245 27.325);
     --input: oklch(0.922 0 0);
